syntax = "proto3";

package chat;

// The chat service definition.
service Chatter {
  // Sends a chatMessage
  rpc sendMessage (ChatRequest) returns (ChatReply) {}
}


message ChatRequest {
  int64 messageId = 1;
  repeated int64 userIds = 2;
  bytes mes = 3;
}


message ChatReply {
  int32 code = 1;
  string mes = 2;
}